Try Benji Fisher's `python_match.vim` plugin
https://github.com/vim-scripts/python_match.vim
https://www.vim.org/scripts/script.php?script_id=386

--- a/.gitmodules
+++ b/.gitmodules
@@ -325,3 +325,6 @@
 [submodule "misc/AUR/dragon-drag-and-drop"]
 	path = misc/aur/dragon-drag-and-drop
 	url = https://aur.archlinux.org/dragon-drag-and-drop.git
+[submodule "home/vim/pack/meribold/start/python_match.vim"]
+	path = home/vim/pack/meribold/start/python_match.vim
+	url = https://github.com/vim-scripts/python_match.vim.git
