--- a/home/config/mpd/mpd.conf
+++ b/home/config/mpd/mpd.conf
@@ -1,6 +1,6 @@
 # MPD configuration.  An example configuration is at </usr/share/doc/mpd/mpdconf.example>.
-# The manual is at <http://www.musicpd.org/doc/user/>.  Also see mpd(1), mpd.conf(5) and
-# <https://wiki.archlinux.org/index.php/Music_Player_Daemon>.
+# The manual is at <https://mpd.readthedocs.io/en/stable/user.html>.  Also see mpd(1),
+# mpd.conf(5) and <https://wiki.archlinux.org/title/Music_Player_Daemon>.
 
 music_directory "~/music"
 
