--- a/home/.gitattributes
+++ b/home/.gitattributes
@@ -11,3 +11,4 @@ vim/spell/de.utf-8.add filter=git-crypt diff=git-crypt
 vim/spell/en.utf-8.add filter=git-crypt diff=git-crypt
 irssi/config filter=git-crypt diff=git-crypt
 ssh/config filter=git-crypt diff=git-crypt
+local/share/TelegramDesktop/tdata/dictionaries/custom filter=git-crypt diff=git-crypt
