Still use borderless xterms sometimes
Cf. 66282d20194db4cc3f69f4bb8b78734b3c77754a.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -146,6 +146,7 @@ assign [class="^firefoxdeveloperedition$"] firefox
 
 for_window [instance="^vimsel$"] floating enable
 for_window [instance="^floating xterm$"] floating enable
+for_window [instance="^borderless floating xterm$"] floating enable
 
 for_window [instance="^gcolor2$"] sticky enable
 for_window [instance="^gcolor3$"] sticky enable
