--- a/home/config/khard/khard.conf
+++ b/home/config/khard/khard.conf
@@ -8,7 +8,7 @@ path = ~/.contacts/Default/
 [general]
 debug = no
 default_action = list
-editor = nvim
+editor = vim
 merge_editor = vimdiff
 
 [vcard]
