Get rid of some animations
This results in Firefox showing a static hourglass instead of an
animated progress indicator (throbber?) while loading a page.  I think I
like that.  It probably has other effects as well.

https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion
https://en.wikipedia.org/wiki/Throbber

--- a/home/config/gtk-3.0/settings.ini
+++ b/home/config/gtk-3.0/settings.ini
@@ -7,4 +7,7 @@ gtk-application-prefer-dark-theme = false
 # The cursor shouldn't blink.
 gtk-cursor-blink = 0
 
+# See <https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion>.
+gtk-enable-animations = false
+
 # vim: tw=90 sts=-1 sw=3 et cms=#%s
