--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -146,6 +146,7 @@ workspace 4 output DisplayPort-4 DisplayPort-5 DisplayPort-6
 # See <https://i3wm.org/docs/userguide.html#assign_workspace>.
 assign [class="^firefox$"] firefox
 assign [class="^firefoxdeveloperedition$"] firefox
+assign [class="^firefox-esr$"] firefox
 
 for_window [instance="^vimsel$"] floating enable
 for_window [instance="^floating xterm$"] floating enable
@@ -170,6 +171,7 @@ for_window [title="^Event Tester$"] move position 2359 1399
 # Enable floating mode and add a border to the Firefox about dialog.
 for_window [class="^firefox$" window_role="^About$"] floating enable, border pixel 1
 for_window [class="^firefoxdeveloperedition$" window_role="^About$"] floating enable, border pixel 1
+for_window [class="^firefox-esr$" window_role="^About$"] floating enable, border pixel 1
 
 # Use a sticky scratchpad window for Newsboat.
 for_window [instance="^newsboat$"] floating enable
