--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -221,6 +221,6 @@ for_window [class="^Signal$" instance="^signal$"] floating enable
 workspace vim gaps inner 0
 workspace vim gaps horizontal 4
 workspace vim gaps vertical 2
-for_window [class="^URxvt$" instance="^vim$"] move container to workspace vim, border none
+for_window [class="^XTerm$" instance="^vim$"] move container to workspace vim, border none
 
 for_window [class="^XTerm$" instance="^nethack$"] move container to workspace nethack, focus
