--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -203,6 +203,11 @@ for_window [instance="^floating man$"] move right 808 px
 for_window [instance="^floating man$"] move scratchpad
 for_window [instance="^floating man$"] scratchpad show
 
+for_window [class="^XTerm$" instance="^peek$"] floating enable
+for_window [class="^XTerm$" instance="^peek$"] move right 745 px
+for_window [class="^XTerm$" instance="^peek$"] move scratchpad
+for_window [class="^XTerm$" instance="^peek$"] scratchpad show
+
 # This enhances a keybind defined in `home/xbindkeysrc`.  TODO: set the keybind up here
 # and don't use XBindKeys for this one?
 for_window [class= "^feh$" instance="^feh$" title="^feh \[1 of 1\] - /tmp/qrencode\....\.png$"] floating enable
