--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -127,7 +127,7 @@ client.focused          #000000 #c0c0c0 #c0c0c0 #2e9ef4
 client.focused_inactive #000000 #606060 #606060 #484e50
 client.unfocused        #000000 #121212 #121212 #292d2e
 client.urgent           #000000 #900000 #900000 #900000
-client.placeholder      #000000 #0c0c0c #0c0c0c #000000
+client.placeholder      #000000 #000000 #000000 #000000
 client.background       #000000
 
 # 23 is a magic number.  Increasing it by one reduces the number of columns, that fit into
