Fontconfig: stop using Ubuntu Mono
For an explanation of why we are moving away from Ubuntu Mono, see
<https://github.com/meribold/meribold.org/commit/948be35a49b1bd6f9e336>.

--- a/home/config/fontconfig/fonts.conf
+++ b/home/config/fontconfig/fonts.conf
@@ -22,7 +22,7 @@
    <alias>
       <family>monospace</family>
       <prefer>
-         <family>Ubuntu Mono</family>
+         <family>Cascadia Mono</family>
          <family>Noto Sans Mono CJK TC</family>
          <family>Noto Sans Mono</family>
       </prefer>
